# AL4MyoChallenge

./: .flake8  .gitignore  .pre-commit-config.yaml  LICENSE.txt  README.md  baoding_verification.json  die_verification.json  pyproject.toml
al4myochallenge/: .gitignore  .nfs0000000004fb7fe80000026c  custom_distributed.py  custom_test_environment.py  custom_trainer.py  main.py  play.py
al4myochallenge/env_wrappers/: __init__.py  wrappers.py
al4myochallenge/myo_env/: __init__.py  baoding_v1.py  register_myosuite.py
al4myochallenge/utils/: __init__.py  keypoint_test.py  nvidia_license.txt  trifinger_kernel_reward.py  utils.py
