[tool.poetry]
name = "al4myochallenge"
version = "0.1.0"
description = "Solutions for the MyoChallenge Baoding Balls task from the AL4Muscles team (2nd place)."
authors = ["Pierre Schumacher <pierre.schumacher@tuebingen.mpg.de>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.9, <3.11"
MyoSuite = "^1.3.0"
llvmlite = "^0.39.0"
torch = "^1.13.1"
pyyaml = "^6.0"
tonic = {git = "https://github.com/P-Schumacher/tonic.git", branch="updates"}

[tool.poetry.group.dev.dependencies]
pudb = "^2022.1.3"
pre-commit = "*"

[tool.black]
line-length = 79
target-version = ["py39"]

[tool.isort]
profile = "black"
filter_files = "True"
line_length = 79
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
